# dmn_prolog_converter

./: .gitignore  CDMN_INTEGRATION.md  CLI_GUIDE.md  DEV_GUIDE.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  SUMMARY.md  USAGE_GUIDE.md  Z3_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
dmn_prolog_converter/: cli.py  converter.py
dmn_prolog_converter/execution/: dmn_executor.py
dmn_prolog_converter/generator/: dmn_generator.py  prolog_generator.py  z3_generator.py
dmn_prolog_converter/ir/: intermediate.py
dmn_prolog_converter/parser/: dmn_parser.py  prolog_parser.py  z3_parser.py
dmn_prolog_converter/validation/: dmn_validator.py
tests/: test_converter.py  test_execution.py  test_z3_converter.py
tests/examples/: discount_calculation.dmn  discount_calculation.pl  discount_calculation_roundtrip.pl  loan_eligibility.dmn  loan_eligibility.pl  loan_eligibility.smt2  loan_eligibility_roundtrip.pl  tax_bracket.dmn  tax_bracket.pl  tax_bracket.smt2  tax_bracket_from_prolog.smt2  tax_bracket_from_z3.dmn  tax_bracket_roundtrip.pl
